--- a/3.SocketBrodeChat/public/index.html
+++ b/3.SocketBrodeChat/public/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-        var chatio = io('/chat');
+        var chatio = io('/chat2');
 
         function joinRoom() {
             chatio.emit('cJoin');
